kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-quality-cli
  labels:
    component: ui
    part-of: web
    managed-by: kustomize
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: test-quality-cli
