kustomize/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: test-quality-cli
spec:
  rules:
    - host: stage-cli.testquality.com
      http:
        paths:
          - path: /
            backend:
              serviceName: test-quality-cli
              servicePort: 80
